# RTS-P1-Cyclic-Scheduling

./: .gitignore  CMakeLists.txt  README.md  build_instructions.txt
ARDUINO/arduino_code/: arduino_codeC.ino  arduino_codeD.ino
RTEMS_A/: controladorA.c
RTEMS_B/: controladorB.c
RTEMS_C/: controladorC.c
RTEMS_D/: CMakeLists.txt
practica_1A_rtems_2023-v1/: CMakeLists.txt  controladorA.c  controladorA_emmanuel.c
practica_1B_rtems_2023-v1/: CMakeLists.txt  controladorB.c
practica_1C_rtems_2023-v1/: CMakeLists.txt  controladorC.c
practica_1D_rtems_2023-v1/: controladorD.c
practica_1_arduino_2023-v1/arduino_code/: arduino_code.ino  arduino_codeA.ino  arduino_codeB.ino  arduino_codeC.ino  arduino_codeD.ino
pseudocode/: scheduler_modes.txt  scheduling_algorithm.txt
schedulers/arduino/: A.drawio  B.drawio  C_approach.drawio  C_selection.drawio  C_stop.drawio  D_emergency.drawio
schedulers/rtems/: A.drawio  B.drawio  C_braking_mode.drawio  C_normal_mode.drawio  C_stop_mode.drawio  D.drawio
toolchain/: i386-rtems5.cmake
